# risco_bancario

./: .dockerignore  .env.demo.example  .env.example  .env.local.example  .env.test.example  .gitattributes  .gitignore  .gitleaksignore  CHANGELOG.md  README.md  TODO.md  changelog.md  compose.yaml  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-api.txt  requirements.txt  start_system.ps1  start_system.sh
.github/: release.yml
.github/workflows/: cd.yml  ci.yml
.trae/documents/: Extração e Documentação do Módulo PRINAD.md  Integração Real do Agente com Banco de Dados MySQL.md
app/: dashboard.py  streaming_sender.py
backend/: __init__.py  main.py
backend/agente/: __init__.py  agent_api.py  agent_core.py  config.py  database.py  mock_data.py  permissions.py  tools_documentos.py  tools_graficos.py  tools_orquestrador.py  web_search.py
backend/bancos_de_dados/: README.md  esquema_completo.sql
backend/file_search/: FILE_SEARCH_SYSTEM.md  file_search.py  file_search_api_routes.py  file_search_tables.sql  index_user_docs.py
backend/perda_esperada/: README.md
backend/prinad/: CHANGELOG.md  __init__.py  start_system.ps1  test_diagnosis.py  test_output.txt  test_result.txt
backend/propensao/: CHANGELOG.md  README.md  __init__.py
backend/scripts/: carga_dados_csv.py  index_all_docs.py  index_docs_standalone.py  test_agente_flow.py
backend/shared/: __init__.py  auth_api.py  auth_router.py  ntlm_middleware.py  password_policy.py  relatorios_auditoria.py  session_manager.py
config/ccf_policy/: 2026.07.1.json
config/default_policy/: 2026.07.1.json
config/ead_policy/: 2026.07.1.json
config/ead_validation/: 2026.07.1.json
config/ecl_grouping/: 2026.07.1.json
config/environments/: demo.json  local.json  test.json
config/lgd_collateral_policy/: 2026.07.1.json
config/lgd_policy/: 2026.07.1.json
config/lgd_validation/: 2026.07.1.json
config/macro_risk_relations/: 2026.07.1.json
config/observability/: alert_rules.yml  prometheus.yml
config/off_balance_ead_policy/: 2026.07.1.json
config/performance/: targets.json
config/risk_policy/: 2026.07.1.json
config/scenario_sensitivity/: 2026.07.1.json
dados/: avaliacoes_risco.csv  base_3040.csv  base_cadastro.csv
docker/: Dockerfile.api  Dockerfile.ecl  Dockerfile.frontend  Dockerfile.prinad  Dockerfile.propensao  nginx.conf
docs/: ANALISE_CONFORMIDADE_BACEN.md  FILE_SEARCH.md  FINAL_RELEASE_ASSESSMENT.md  GLOSSARY.md  MASTER_BACKLOG.md  PROJECT_AUDIT_AND_TARGET_STATE.md  SCOPE.md  log_codex.md  modelo_prinad_basel3.md
docs/demo/: README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.browser.config.ts  vite.config.ts
frontend-nextjs-backup/: package.json
modelo/: optimized_model.joblib  optimized_preprocessor.joblib  preprocessor.joblib  training_metrics.joblib
perda_esperada/: README.md
prinad/: .env.example  CHANGELOG.md  README.md  __init__.py  test_diagnosis.py  test_output.txt  test_result.txt
prinad_v2/: Conceito PRINAD_v2.docx  README.md  requirements.txt
propensao/: CHANGELOG.md  README.md  __init__.py
scripts/: bootstrap_api_user.py  deploy.py  e2e_pipeline.py  export_regulatory_package.py  generate-synthetic-data.ps1  generate_ead_backtest_report.py  generate_ecl_backtest_report.py  generate_lgd_backtest_report.py  generate_pd_backtest_report.py  performance_benchmark.py  quality.ps1  quality.py  regulatory-report.ps1  security_maintenance.py  setup.ps1
shared/: __init__.py  audit_logger.py  utils.py
src/: __init__.py  api.py  classifier.py  data_pipeline.py  scr_data_generator.py
tests/: RELATORIO_TESTES.md  __init__.py  integration_e2e_runner.py  relatorio_impacto_financeiro.txt  simulacao_impacto_financeiro.py  test_api.py  test_feature_engineering.py
(+702 files in other folders)
